--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.9.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
 
